--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             <div class="cabezatres">
                 <h4>Si te Gusta la página, Compártela!!!</h4>
                 <ul class="sociales">
-                    <li><a href="https://www.facebook.com/sharer.php?u=https://losnostalgicosradioonline.000webhostapp.com" target="_blank"><img src="imagen/facebook.png" width="30" alt=""></a></li>
-                    <li><a href="https://www.twitter.com/intent/tweet?text=LosNostalgicos&url=https://losnostalgicosradioonline.000webhostapp.com&via=LosNostalgicos&hashtags=#LosNostalgicos" target="_blank"><img src="imagen/twiter.png" width="30" alt=""></a></li>
-                    <li><a href="https://api.whatsapp.com/send?text=https://losnostalgicosradioonline.000webhostapp.com" target="_blank"><img src="imagen/whatsapp.png" width="30" alt=""></a></li>
-                    <li><a href="https://www.telegram.me/share/url?url=https://losnostalgicosradioonline.000webhostapp.com&text=Radio online, Discografías completas" target="_blank"><img src="imagen/telegram.png" width="30" alt=""></a></li>
-                    <li><a href="https://www.linkedin.com/shareArticle?url=https://losnostalgicosradioonline.000webhostapp.com" target="_blank"><img src="imagen/linkedin.png" width="30" alt=""></a></li>
+                    <li><a href="https://www.facebook.com/sharer.php?u=https://jov19037.github.io/losnostalgicos/" target="_blank"><img src="imagen/facebook.png" width="30" alt=""></a></li>
+                    <li><a href="https://www.twitter.com/intent/tweet?text=LosNostalgicos&url=https://jov19037.github.io/losnostalgicos/&via=LosNostalgicos&hashtags=#LosNostalgicos" target="_blank"><img src="imagen/twiter.png" width="30" alt=""></a></li>
+                    <li><a href="https://api.whatsapp.com/send?text=https://jov19037.github.io/losnostalgicos/" target="_blank"><img src="imagen/whatsapp.png" width="30" alt=""></a></li>
+                    <li><a href="https://www.telegram.me/share/url?url=https://jov19037.github.io/losnostalgicos/&text=Radio online, Discografías completas" target="_blank"><img src="imagen/telegram.png" width="30" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/shareArticle?url=https://jov19037.github.io/losnostalgicos/" target="_blank"><img src="imagen/linkedin.png" width="30" alt=""></a></li>
                 </ul>
                 
                 
@@ -217,11 +217,11 @@
             <div class="compartirii">
                 <h4>Si te Gusta la página, Compártela!!!</h4>
                 <ul class="socialesdos">
-                    <li><a href="https://www.facebook.com/sharer.php?u=https://losnostalgicosradioonline.000webhostapp.com" target="_blank"><img src="imagen/facebook.png" width="30" alt=""></a></li>
-                    <li><a href="https://www.twitter.com/intent/tweet?text=LosNostalgicos&url=https://losnostalgicosradioonline.000webhostapp.com&via=LosNostalgicos&hashtags=#LosNostalgicos" target="_blank"><img src="imagen/twiter.png" width="30" alt=""></a></li>
-                    <li><a href="https://api.whatsapp.com/send?text=https://losnostalgicosradioonline.000webhostapp.com" target="_blank"><img src="imagen/whatsapp.png" width="30" alt=""></a></li>
-                    <li><a href="https://www.telegram.me/share/url?url=https://losnostalgicosradioonline.000webhostapp.com&text=Radio online, Discografías completas" target="_blank"><img src="imagen/telegram.png" width="30" alt=""></a></li>
-                    <li><a href="https://www.linkedin.com/shareArticle?urlhttps://losnostalgicosradioonline.000webhostapp.com" target="_blank"><img src="imagen/linkedin.png" width="30" alt=""></a></li>
+                    <li><a href="https://www.facebook.com/sharer.php?u=https://jov19037.github.io/losnostalgicos/" target="_blank"><img src="imagen/facebook.png" width="30" alt=""></a></li>
+                    <li><a href="https://www.twitter.com/intent/tweet?text=LosNostalgicos&url=https://jov19037.github.io/losnostalgicos/&via=LosNostalgicos&hashtags=#LosNostalgicos" target="_blank"><img src="imagen/twiter.png" width="30" alt=""></a></li>
+                    <li><a href="https://api.whatsapp.com/send?text=https://jov19037.github.io/losnostalgicos/" target="_blank"><img src="imagen/whatsapp.png" width="30" alt=""></a></li>
+                    <li><a href="https://www.telegram.me/share/url?url=https://jov19037.github.io/losnostalgicos/&text=Radio online, Discografías completas" target="_blank"><img src="imagen/telegram.png" width="30" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/shareArticle?urlhttps://jov19037.github.io/losnostalgicos/" target="_blank"><img src="imagen/linkedin.png" width="30" alt=""></a></li>
                 </ul>
             </div>
             <div class="compartiriii">
