--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 </div>
                 <section class="radio">
                     			<!-- RCAST.NET - START EMBEDDED PLAYER --> 
-			        <iframe src="http://losnostalgicos.nichesite.org/repronostal" width="60%" height="550" allowtransparency="yes" 
-                                frameborder="0" marginheight="0" marginwidth="0" scrolling="auto" border="solid 2px #b299ff"></iframe>
+			        <iframe width="90%" height="122" src="https://players.rcast.net/fantastic/71998" frameborder="0" scrolling="no" allow="autoplay"></iframe> 
+			        <div style="overflow:hidden; height:0px; width:0px;"><a href="https://www.rcast.net" title="Internet Radio Hosting">RCAST.NET</a></div>
 			        <!-- RCAST.NET - END EMBEDDED PLAYER -->
 			
                 </section>
