--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
       }(document, 'script', 'facebook-jssdk'));
     </script>
 
+<a href="https://api.whatsapp.com/send?phone=525538439699" class="btn-wsp" target="_blank">
+    <i class="fa fa-whatsapp icono"></i>
+</a>
+
     <main>
         <header class="cabeza">
             <div class="cabezados">
