--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     
 </head>
 <body>
+
+	<!-- inicio lluvia de nieve  -->
+		<div id="particles-js"></div>
+		
+		<script src="particles.min.js"></script>
+		<script src="app.js"></script>
+		<!--  fin lluvia de nieve -->
      <!-- boton dinamico de wp -->
      <link rel="stylesheet" href="whats.css">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
