--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		<script src="app.js"></script>
 		<!--  fin lluvia de nieve -->-->
      <!-- boton dinamico de wp -->
-     <!--<link rel="stylesheet" href="whats.css">
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">-->
+     <!--<link rel="stylesheet" href="whats.css">-->
+     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">-->
 
 
      <link rel="stylesheet" href="whats2.css">
