--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <p>También nos puedes encontrar en:</p>
 					<div class="linkradios">
 						<div class="linkradiouno">
-							<a href="#" target="_blank"><img src="imagen/radios03.png" width="250" alt="Logo RADDIOS" title="escúchanos en raddios.com"></a>
+							<a href="https://www.raddios.com/20798-radio-online-los-nostalgicos-online-tecamac-mexico" target="_blank"><img src="imagen/radios03.png" width="250" alt="Logo RADDIOS" title="escúchanos en raddios.com"></a>
 						</div>
 						<div class="linkradiodos">
 							<a href="https://mytuner-radio.com/radio/los-nostalgicos-radio-online-507393/#google_vignette" target="_blank"><img src="imagen/myTuner.png" width="250" alt="Logo MyTuner" title="escúchanos en MyTuner Radio"></a>
